--- a/styles/style.css
+++ b/styles/style.css
@@ -1,32 +1,207 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+html, body {
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+:root {
+  --blue: #131340;
+  --white: #e7e7e7;
+}
+
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 10px 0;
-}
-
-p {
-    margin: 0;
-    padding: 10px 0;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    /* background-color: var(--blue); */
+    /* background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80'); */
+    background-image: url(./assets/bg-2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: var(--white);
 }
 
 a {
-    color: #007BFF;
-    text-decoration: none;
+    color: #0170e7;
+    text-decoration: underline;
+    transition: 0.3s;
 }
 
 a:hover {
     text-decoration: underline;
+    color: var(--white);
 }
 
-.container {
-    width: 90%;
-    max-width: 1200px;
+h1 {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-bottom: 0.5em;
+    font-weight: 800;
+    font-size: 3.5em;
+    color: var(--white);
+    text-shadow: 0px 0px 12px rgba(98, 121, 220, 0.95);
+}
+h2 {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-bottom: 0.5em;
+    font-weight: 800;
+    font-size: 2.5em;
+    color: var(--white);
+    text-shadow: 0px 0px 12px rgba(98, 121, 220, 0.95);
+}
+.home-container {
+    width: 100vw;
     margin: 0 auto;
-    padding: 20px;
+    padding: 2em;
+}
+
+.small-text {
+    font-size: 0.8em;
+    font-weight: 300;
+}
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  text-transform: uppercase;
+  letter-spacing: 0.07em;
+  color: rgb(43, 56, 94);
+  background: #ffffff;
+  border: 1px solid rgb(191, 191, 191);
+  border-radius: 20px;
+  margin-bottom: 1em;
+  padding: 0.3em 5em;
+  font-size: 0.8em;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+button:hover {
+  box-shadow: 0px 0px 15px 2px rgba(152, 143, 233, 0.95);
+  cursor: pointer;
+}
+
+.cta-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 2;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+  color: rgb(43, 56, 94);
+  background: #ffffff;
+  border: 1px solid rgb(191, 191, 191);
+  border-radius: 20px;
+  padding: 0.3em 5em;
+  font-size: 1em;
+  font-weight: 600;
+  transition: 0.3s;
+}
+.home-container p {
+    color: var(--blue);
+    padding-bottom: 1em;
+}
+
+/* SIGNUP PAGE */
+.signup-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 2em;
+    padding: 2em;
+    color: var(--blue);
+    background: rgba(255, 255, 255, 0.21);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(11.6px);
+    border: 1px solid rgba(255, 255, 255, 0.63);
+    border: 1px solid rgb(178, 178, 179);
+    border-radius: 20px;
+}
+.signup-form {
+    padding-top: 2em;
+}
+.signup-form input {
+    width: 100%;
+    padding: 0.5em;
+    margin-bottom: 1em;
+    border: 1px solid var(--white);
+    border-radius: 20px;
+    background-color: rgb(228, 228, 228);
+    color: rgb(0, 0, 0);
+}
+.signup-form input:focus {
+    outline: none;
+    border: 1px solid var(--white);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 15px 2px rgba(53, 39, 185, 0.95);
+}
+
+
+
+.login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 2em;
+    padding: 2em;
+    color: var(--blue);
+    background: rgba(255, 255, 255, 0.21);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(11.6px);
+    border: 1px solid rgba(255, 255, 255, 0.63);
+    border: 1px solid rgb(178, 178, 179);
+    border-radius: 20px;
+}
+.login-form {
+    padding-top: 2em;
+}
+.login-form input {
+    width: 100%;
+    padding: 0.5em;
+    margin-bottom: 1em;
+    border: 1px solid var(--white);
+    border-radius: 20px;
+    background-color: rgb(228, 228, 228);
+    color: rgb(0, 0, 0);
+}
+.login-form input:focus {
+    outline: none;
+    border: 1px solid var(--white);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 15px 2px rgba(53, 39, 185, 0.95);
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 2.7em;
+    }
+    h2 {
+        font-size: 2.3em;
+    }
+    .signup-container{
+        width: 90%;
+    }
 }
