--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ body {
     font-family: 'Open Sans', Helvetica, sans-serif;
     /* background-color: var(--blue); */
     /* background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80'); */
-    background-image: url(./assets/bg-2.png);
+    background-image: url('https://drive.google.com/thumbnail?id=1dU7cUBeIj75bs2jhozxUidyUF8lEtDHj&sz=w1000');
     background-size: cover;
     background-repeat: no-repeat;
     background-size: cover;
